--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Gil de mrd</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="wrapper">
+      Eres un tremendo
+      <div class="slider">
+        <div class="slider1">mrd</div>
+        <div class="slider2">de</div>
+        <div class="slider3">gil</div>
+      </div>
+    </div>
+  </div>  
 </body>
 </html>
