--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
   <title>Caia Gil</title>
 </head>
 <body>
-    
+    <h1 class="title">Gil de mrd</h1>
+    <header class="header">
+        <nav>
+            <ul class="nav">
+                <li class="nav__item">Caia ctmr</li>
+                <li class="nav__item">Caia ctmr</li>
+                <li class="nav__item">Caia ctmr</li>
+                <li class="nav__item">Caia ctmr</li>
+                <li class="nav__item">Caia ctmr</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
