--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
       </ul>
     </nav>
   </header>
+  <footer class="footer">
+    <div class="description">
+      <address>
+        EL TEMPLO SAGRADO DE JAVACHO NUEVO REQXICO <br>
+        Si gusta visitar la zona turística: <br>
+        Ca. Las florcitas del campo #666 <br>
+        Nuevo Reqxico <br>
+        Lambayeque <br>
+        Peru
+      </address>
+    </div>
+    <div class="logo">
+      NUEVO REQXICO
+    </div>
+  </footer>
 </body>
 
 </html>
